Changed the rendering approach to use DocSets